<resources>
    <string name="app_name">Omnistick</string>

    <string name="start">Start</string>
    <string name="projects">Projects</string>
    <string name="setup">Setup</string>
    <string name="how_to">How To</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_session">Session</string>
    <string name="setSound">Set configuration</string>
    <string name="setBackgroundSound">Set background music</string>
    <string name="clearSound">Clear configuration</string>
    <string name="left_orientation">Lefty</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_projects">Projects</string>
    <string name="title_activity_setup">Setup</string>
    <string name="title_activity_how_to">HowTo</string>
    <string name="included">chosen</string>
    <string name="discluded">un-chosen</string>
    <string name="lefty">lefty</string>
    <string name="righty">righty</string>
    <string name="record">record</string>
    <string name="recording">recording&#8230;</string>
    <string name="playBackground">play background</string>
    <string name="pauseBackground">pause background</string>

    <string name="start_screen">Start screen</string>
    <string name="how_to_play">In this screen you start a Jammin\' session</string>
    <string name="how_to_play_1">In order to play a sound, grab your phone and with your fingers select the "chord", while the "chord" is selected tilt your device as if it was a drum stick!</string>
    <string name="how_to_play_2">The background music button switches from play to pause, no need to tilt there&#8230;</string>
    <string name="how_to_play_3">Once the record button is pressed it will register your moves and a second press will prompt you to save the session</string>

    <string name="projects_screen">Projects screen</string>
    <string name="how_to_project">In this screen you can listen to your saved sessions</string>
    <string name="how_to_project_1">Play and stop functionality for each project</string>
    <string name="how_to_project_2">The playback is by simulating your moves</string>

    <string name="setup_screen">Setup screen</string>
    <string name="how_to_setup">In This screen you can customize your sounds and layouts</string>
    <string name="how_to_setup_1">Set background music button will prompt you with your selection of music from your device</string>
    <string name="how_to_setup_2">Sensitivity selection is a triple option selection: low, medium and high. The lower the sensitivity the harder it is to hit the drum</string>
    <string name="how_to_setup_3">4 buttons for selection of a "chord" configuration. once a configuration is made you can set the configuration or clear it.</string>
    <string name="how_to_setup_4">Righty or Lefty button switches betwwen righty and lefty modes.</string>

    <string-array name="sensitivity_array">
        <item>high sensitivity</item>
        <item>medium sensitivity</item>
        <item>low sensitivity</item>
    </string-array>
</resources>
