<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.noy.loy.omnistick.HowTo"
    android:orientation="vertical">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- START Explanation -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minHeight="250px"
                android:background="#004739">
                <LinearLayout
                    android:layout_width="0px"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:padding="5dp">
                        <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:adjustViewBounds="true"
                        android:src="@drawable/start_s"/>
                </LinearLayout>
                <TextView android:text="@string/how_to_play" android:layout_width="0px" android:layout_weight="1"
                    android:layout_height="wrap_content" android:textSize="40dp" android:layout_marginBottom="25dp"/>
            </LinearLayout>

            <TextView android:text="@string/how_to_play_1" android:layout_width="wrap_content"
                android:layout_height="wrap_content"  android:textSize="20dp" android:layout_marginBottom="15dp"/>
            <TextView android:text="@string/how_to_play_2" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:textSize="20dp"  android:layout_marginBottom="15dp"/>
            <TextView android:text="@string/how_to_play_3" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:textSize="20dp" android:layout_marginBottom="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="250px"
                    android:background="#004739">
                    <LinearLayout
                        android:layout_width="0px"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:padding="5dp">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:adjustViewBounds="true"
                            android:src="@drawable/projects_s"/>
                    </LinearLayout>
                    <TextView android:text="@string/how_to_project" android:layout_width="0px" android:layout_weight="1"
                        android:layout_height="wrap_content" android:textSize="40dp" android:layout_marginBottom="25dp"
                        android:layout_marginTop="15dp"/>
                </LinearLayout>


                <TextView android:text="@string/how_to_project_1" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:textSize="20dp" android:layout_marginBottom="15dp" />
                <TextView android:text="@string/how_to_project_2" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:textSize="20dp" android:layout_marginBottom="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="250px"
                    android:background="#004739">
                    <LinearLayout
                        android:layout_width="0px"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:padding="5dp">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:adjustViewBounds="true"
                            android:src="@drawable/setup_s"/>
                    </LinearLayout>
                    <TextView android:text="@string/how_to_setup" android:layout_width="0px" android:layout_weight="1"
                        android:layout_height="wrap_content" android:textSize="40dp" android:layout_marginBottom="25dp"
                        android:layout_marginTop="15dp"/>
                </LinearLayout>

                <TextView android:text="@string/how_to_setup_1" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:textSize="20dp" android:layout_marginBottom="15dp" />
                <TextView android:text="@string/how_to_setup_2" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:textSize="20dp" android:layout_marginBottom="15dp" />
                <TextView android:text="@string/how_to_setup_3" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:textSize="20dp" android:layout_marginBottom="15dp" />
                <TextView android:text="@string/how_to_setup_4" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:textSize="20dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>

</LinearLayout>
