<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBox
        android:id="@+id/lefty_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left_orientation"/>
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_margin="0px"
        android:padding="0px"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:baselineAligned="true">
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2">
            <Button
                android:id="@+id/a_button_set"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:text="@string/setSound"/>
            <Button
                android:id="@+id/b_button_set"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:text="@string/setSound"/>
            <Button
                android:id="@+id/c_button_set"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:text="@string/setSound"/>
            <Button
                android:id="@+id/d_button_set"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:text="@string/setSound"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <Button
                android:id="@+id/a_button_clear"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:text="@string/clearSound"/>
            <Button
                android:id="@+id/b_button_clear"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:text="@string/clearSound"/>
            <Button
                android:id="@+id/c_button_clear"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:text="@string/clearSound"/>
            <Button
                android:id="@+id/d_button_clear"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:text="@string/clearSound"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
